bin/tests/snapshots/shellcheck__0e4ffdc1b71de9f436f87b3c1dd2820d_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ packages = [ (pkgs.writeShellScriptBin "list" ''
  for f in $(ls *.txt); do echo "$f"; done
'') ]; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 { packages = [ (pkgs.writeShellScriptBin "list" ''
-  for f in $(ls *.txt); do echo "$f"; done
+  for f in *.txt; do echo "$f"; done
 '') ]; }
