bin/tests/snapshots/shellcheck__1565cb6fd0a53cdfc96bb779eb199110_fix.snap
---
source: bin/tests/shellcheck.rs
---
runCommand "x" { } ''
  touch $out
  cd $TMPDIR
''
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 runCommand "x" { } ''
-  touch $out
-  cd $TMPDIR
+  touch "$out"
+  cd "$TMPDIR" || exit
 ''
