bin/tests/snapshots/shellcheck__1565cb6fd0a53cdfc96bb779eb199110_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
runCommand "x" { } ''
  touch $out
  cd $TMPDIR
''
---
<temp_file_path>>2:9:W:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>3:3:W:28:[shellcheck] SC2164: Use 'cd ... || exit' or 'cd ... || return' in case cd fails.
<temp_file_path>>3:6:W:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
