bin/tests/snapshots/shellcheck__36851f216d4af782ae3b671e8d258b51_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
let greet = "echo $1"; setup = ''
  cd $HOME
''; in { scripts.greet.exec = greet; enterShell = ''
  ${setup}
  echo ready
''; }
---
<temp_file_path>>1:19:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>2:3:W:28:[shellcheck] SC2164: Use 'cd ... || exit' or 'cd ... || return' in case cd fails.
<temp_file_path>>2:6:W:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
